Windows are restored in seemingly random workspaces after a restart under Gnome 3
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: redneb, Assigned: stransky)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:76.0) Gecko/20100101 Firefox/76.0
Steps to reproduce:
#372650 introduced a new feature where after restarting firefox, windows are restored to the workspace with the same id as the one that they were originally in.
I think this new behavior does not make sense under Gnome 3 with its default settings, where workspaces are created dynamically; workspaceID=3 will refer to a completely different workspace after e.g. I reboot my computer.
Typically, I have ~6 firefox windows open across different workspaces. Most of those workspaces only have the firefox window in them. When I close firefox, these workspaces are removed by Gnome. If I start firefox again, I have to spend time searching for all the firefox windows that appear in (seemingly) random workspaces.
Reporter | ||
Updated•4 years ago
|
Reporter | ||
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
Dynamic workspaces config can be obtained by 'gsettings get org.gnome.mutter dynamic-workspaces'
so we can query it before we restore them.
Comment 2•4 years ago
|
||
Does 'xprop -root _NET_DESKTOP_NAMES' return something useful under gnome 3?
Comment 3•4 years ago
|
||
I tested and that gives me the name of one workspace only. But I'm on Wayland, and that could be related (but I do have two workspaces). I tried opening X-only windows on the second desktop, and that changed nothing.
Reporter | ||
Comment 4•4 years ago
|
||
(In reply to Peder Stray from comment #2)
Does 'xprop -root _NET_DESKTOP_NAMES' return something useful under gnome 3?
I'm on x11 and simply returns "Workspace 1" no matter where I call it from (unless this is the an artifact of gnome-terminal-server running persistently and "Workspace 1" being the place where the first terminal window was created).
Comment 5•4 years ago
|
||
FWIW, it was Workspace 1 for me too, but translated into my locale. And I did try opening an xterm on the second workspace and that didn't change anything.
Comment 6•4 years ago
|
||
Hmm... was hoping it would return something like what it does when i run it under the i3 wm:
_NET_DESKTOP_NAMES(UTF8_STRING) = "1", "2", "3:chat", "4:web", "5", "8"
Assignee | ||
Comment 7•4 years ago
|
||
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3
(Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3
(normal.)
Updated•4 years ago
|
Assignee | ||
Comment 9•4 years ago
|
||
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
bugherder |
Description
•