Bug 1635787 [Gtk/Linux] Don't use workspace management when running on Gnome dynamic workspaces, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D74661